--- a/Website/index.html
+++ b/Website/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vital Care System</title>
 
-  <!-- ✅ Browser tab icon -->
+  <!--  Browser tab icon -->
   <link rel="icon" type="image/svg+xml" href="header.svg">
 
   <link href="https://fonts.googleapis.com/css2?family=Gaegu&display=swap" rel="stylesheet">
